$Id: ChangeLog,v 1.129 2005/07/16 15:09:18 mthuurne Exp $

2005-10-14 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added configuration check (WIP).

2005-07-16 Maarten ter Huurne <maarten@treewalker.org>
	* Compile fixes for wxWidgets 2.6.1.

2005-07-02 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added support for 2 keyjoysticks

2005-06-23 Manuel Bilderbeek <manuel@msxnet.org>
	* There is a bug in wxGTK making ListBox::GetSelections() not work
	  when it is disabled. Fixed it by doing the disable a bit later,
	  after the GetSelections() stuff is done

2005-06-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed some about dialog sizes
	* Fixed placing of child dialogs

2005-05-29 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed hang in catapult and/or openMSX when selecting a disk from
	   the history.
	* Fixed a problem with selecting a disk for drive B from the history
	* Changed the about dialog

2005-05-14 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed rensha turbo update problem
	* Fixed missing backslashes with printer log file
	* Fixed pressing F10 (menu) before openMSX shows its screen

2005-05-13 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Added socket support (enable it by uncommenting line 82 of
	   openMSXController.cpp)
	* Replaced bitmaps with png's and removed the masking code.

2005-04-25 Manuel Bilderbeek <manuel@msxnet.org>
	* Added EXPERIMENTAL AND UNTESTED build support for the following CPUs.
	  DEC Alpha, ARM, HP PA-RISC, IA-64, Motorola 680x0, MIPS (Big and
	  Little Endian), IBM S/390.
	  Everything should work (endianness is OK), but we have no systems to
	  test on. Let's wait until someone complains that it doesn't work and
	  then fix it (if needed at all).

2005-03-05 Maarten ter Huurne <maarten@treewalker.org>
	* Released openmsx-catapult-0.5.1-R1.

2005-03-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Control groups are now disabled if all controls in that group are.