@@ -1,12 +1,11 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.3.2 on Sun Oct 09 12:13:39 2005 -->
+<!-- generated by wxGlade 0.4cvs on Fri Oct 14 12:23:07 2005 -->
 
-<application path="" name="" class="" option="0" language="python" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="1">
+<application path="" name="" class="" option="0" language="python" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="1" for_version="2.6">
     <object class="wxDialog" name="CheckHardware" base="EditDialog">
-        <style>wxDIALOG_MODAL</style>
         <title>Check Hardware</title>
         <centered>1</centered>
-        <size>342, 290</size>
+        <size>442, 340</size>
         <object class="wxBoxSizer" name="CheckHardwareSizer" base="EditBoxSizer">
             <orient>wxVERTICAL</orient>
             <object class="sizeritem">
@@ -67,7 +66,7 @@
                                 <option>0</option>
                                 <object class="wxStaticText" name="CompleteMachinesCount" base="EditStaticText">
                                     <attribute>1</attribute>
-                                    <label>0</label>
+                                    <label>0    </label>
                                 </object>
                             </object>
                             <object class="sizeritem">
@@ -75,7 +74,7 @@
                                 <option>0</option>
                                 <object class="wxStaticText" name="IncompleteMachinesCount" base="EditStaticText">
                                     <attribute>1</attribute>
-                                    <label>0</label>
+                                    <label>0    </label>
                                 </object>
                             </object>
                         </object>
@@ -115,7 +114,7 @@
                                 <option>0</option>
                                 <object class="wxStaticText" name="CompleteExtensionsCount" base="EditStaticText">
                                     <attribute>1</attribute>
-                                    <label>0</label>
+                                    <label>0    </label>
                                 </object>
                             </object>
                             <object class="sizeritem">
@@ -123,7 +122,7 @@
                                 <option>0</option>
                                 <object class="wxStaticText" name="InCompleteExtensionsCount" base="EditStaticText">
                                     <attribute>1</attribute>
-                                    <label>0</label>
+                                    <label>0    </label>
                                 </object>
                             </object>
                         </object>
@@ -150,7 +149,7 @@
                         <option>0</option>
                         <object class="wxStaticText" name="CheckingObject" base="EditStaticText">
                             <attribute>1</attribute>
-                            <label>CheckingObject</label>
+                            <label>CheckingObjectWithAVeryLongName</label>
                         </object>
                     </object>
                 </object>
@@ -175,7 +174,7 @@
                         <border>5</border>
                         <option>1</option>
                         <object class="wxGauge" name="ProgressGauge" base="EditGauge">
-                            <style>wxGA_HORIZONTAL|wxGA_PROGRESSBAR|wxGA_SMOOTH</style>
+                            <style>wxGA_HORIZONTAL|wxGA_SMOOTH</style>
                             <range>10</range>
                         </object>
                     </object>
@@ -201,7 +200,7 @@
                         <flag>wxLEFT|wxRIGHT</flag>
                         <border>3</border>
                         <option>0</option>
-                        <object class="wxButton" name="AuditUserButton" base="EditButton">
+                        <object class="wxButton" name="CheckConfigsUserButton" base="EditButton">
                             <label>Cancel</label>
                         </object>
                     </object>
